// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test DeployEnvironment Step should render edit Environment view (environment), then update and then save 1`] = `
<div
  class="bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      editEnvironment
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      >
                        New_Project
                      </span>
                    </div>
                  </span>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="deployEnv_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value="New Project"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 0px;"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="description-1"
              >
                <div
                  class="bp3-form-content"
                >
                  <textarea
                    autocomplete="off"
                    class="bp3-input bp3-fill"
                    maxlength="1024"
                    name="description"
                    placeholder="common.descriptionPlaceholder"
                  >
                    test
                  </textarea>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
              </label>
              <div
                class="bp3-form-group"
                data-id="undefined-2"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input bp3-tag-input"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag1
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <span
                        class="bp3-tag"
                        data-tag-index="1"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag2:asd
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        data-mentions="kv-tag-input-tags}"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <label
              class="Label--main bp3-label label"
            >
              envType
            </label>
            <div
              class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
              data-id="type-3"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                >
                  <label
                    class="Thumbnail--squareCardContainer Thumbnail--bigger"
                  >
                    <div
                      class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                    >
                      <span
                        class="Card--corner"
                      >
                        <span
                          class="Card--badge"
                        />
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                          data-icon="main-tick"
                        >
                          <svg
                            height="10"
                            viewBox="0 0 11 8"
                            width="10"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                      <p
                        class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                      >
                        nonProduction
                      </p>
                    </div>
                    <input
                      checked=""
                      name="type"
                      type="checkbox"
                      value="PreProduction"
                    />
                  </label>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                    data-testid="thumbnail-select-change"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                      data-icon="Edit"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 12 12"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        >
                          <path
                            d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                            stroke="#555770"
                          />
                          <path
                            d="M6.583 5.146l2.063-2.063"
                            opacity="0.3"
                            stroke="#606170"
                          />
                        </g>
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      Change
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              data-id="environment-save"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
               
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test DeployEnvironment Step should render environment view and save 1`] = `
<div
  class="bp3-dialog padded-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      newEnvironment
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="StyledProps--font StyledProps--main main"
          >
            <div
              class="InputWithIdentifier--txtNameContainer TextInput--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                  :
                </p>
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                      tabindex="0"
                    >
                      <span
                        class="bp3-editable-text-content"
                        style="height: 1px; line-height: 1px; min-width: 0;"
                      />
                    </div>
                  </span>
                </span>
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="Edit"
                  style="vertical-align: middle; cursor: pointer;"
                >
                  <svg
                    height="12"
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="deployEnv_name"
                  >
                    name
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="description-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
              </label>
            </div>
            <div
              class="StyledProps--font StyledProps--main"
            >
              <label
                class="Label--main bp3-label descriptionLabel"
              >
                optionalField
                <span
                  class="bp3-icon StyledProps--main editOpen"
                  data-icon="Edit"
                  data-name="edit"
                  data-testid="tags-edit"
                >
                  <svg
                    height="12"
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    >
                      <path
                        d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                        stroke="#555770"
                      />
                      <path
                        d="M6.583 5.146l2.063-2.063"
                        opacity="0.3"
                        stroke="#606170"
                      />
                    </g>
                  </svg>
                </span>
              </label>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
          >
            <label
              class="Label--main bp3-label label"
            >
              envType
            </label>
            <div
              class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
              data-id="type-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                >
                  <label
                    class="Thumbnail--squareCardContainer Thumbnail--bigger"
                  >
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                      tabindex="0"
                    >
                      <p
                        class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                      >
                        production
                      </p>
                    </div>
                    <input
                      name="type"
                      type="checkbox"
                      value="Production"
                    />
                  </label>
                  <label
                    class="Thumbnail--squareCardContainer Thumbnail--bigger"
                  >
                    <div
                      class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                      tabindex="0"
                    >
                      <p
                        class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                      >
                        nonProduction
                      </p>
                    </div>
                    <input
                      name="type"
                      type="checkbox"
                      value="PreProduction"
                    />
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              data-id="environment-save"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
               
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
